// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots renders the display panel for a standard article layout 1`] = `
.c0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: black;
  max-width: 360px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #e5e5e5;
  padding: 20px;
  max-width: 360px;
  box-sizing: border-box;
}

.c1 .c2 {
  background: url(https://de5y2r7wr8mpb.cloudfront.net?resize_to=fill&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FYqTtwB7AWqKD95NGItwjJg%252FRachel_Rossin_portrait_2.jpg&width=680&height=284&quality=95) no-repeat center center;
  background-size: cover;
}

.c1 .c3 {
  background: url() no-repeat center center;
  background-size: cover;
}

@media (max-width:720px) {
  .c0 {
    margin: 0 auto;
  }
}

@media (max-width:900px) {
  .c1 {
    margin: auto;
  }
}

@media (max-width:720px) {
  .c1 {
    margin: auto;
  }
}

@media (max-width:600px) {
  .c1 {
    margin: auto;
  }
}

<div
  className="c0"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    style={
      Object {
        "fontSize": 0,
      }
    }
  />
  <div
    className="DisplayPanel__DisplayPanelContainer c1"
  >
    <div
      className="htl-ad"
      data-eager={true}
      data-sizes="300x250"
      data-unit="Desktop_RightRail1"
    />
  </div>
</div>
`;

exports[`snapshots renders the display panel with an image 1`] = `
.c0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: black;
  max-width: 360px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #e5e5e5;
  padding: 20px;
  max-width: 360px;
  box-sizing: border-box;
}

.c1 .c5 {
  background: url(https://de5y2r7wr8mpb.cloudfront.net?resize_to=fill&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FYqTtwB7AWqKD95NGItwjJg%252FRachel_Rossin_portrait_2.jpg&width=680&height=284&quality=95) no-repeat center center;
  background-size: cover;
}

.c1 .c6 {
  background: url() no-repeat center center;
  background-size: cover;
}

.c2 {
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  line-height: 1.23em;
  margin-bottom: 3px;
}

.c3 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  line-height: 1.53em;
  margin-bottom: 20px;
}

.c3 a {
  color: black;
}

.c4 {
  font-family: 'ITC Avant Garde Gothic W04','AvantGardeGothicITCW01D 731075',AvantGardeGothicITCW01Dm,Helvetica,sans-serif;
  -webkit-font-smoothing: antialiased;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-size: 11px;
  line-height: 1.65em;
  color: #e5e5e5;
}

@media (max-width:720px) {
  .c0 {
    margin: 0 auto;
  }
}

@media (max-width:900px) {
  .c1 {
    margin: auto;
  }
}

@media (max-width:720px) {
  .c1 {
    margin: auto;
  }
}

@media (max-width:600px) {
  .c1 {
    margin: auto;
  }
}

<div
  className="c0"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    style={
      Object {
        "fontSize": 0,
      }
    }
  />
  <div
    className="DisplayPanel__DisplayPanelContainer c1"
  >
    <div>
      <div
        className="c2"
      >
        Euismod Inceptos Quam
      </div>
      <div
        className="c3"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. <a href='http://artsy.net/articles'>Example Link</a>",
          }
        }
      />
      <div
        className="c4"
      >
        Sponsored by Artsy
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshots renders the display panel with video 1`] = `
.c0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: black;
  max-width: 360px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #e5e5e5;
  padding: 20px;
  max-width: 360px;
  box-sizing: border-box;
}

.c1 .c5 {
  background: url(https://artsy-media-uploads.s3.amazonaws.com/lHEsRROMLasYi9yZtgTR7A%2Fbombay_artsy_panel_640_28_480.mp4) no-repeat center center;
  background-size: cover;
}

.c1 .c6 {
  background: url(https://de5y2r7wr8mpb.cloudfront.net?resize_to=fill&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FYqTtwB7AWqKD95NGItwjJg%252FRachel_Rossin_portrait_2.jpg&width=680&height=284&quality=95) no-repeat center center;
  background-size: cover;
}

.c2 {
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  line-height: 1.23em;
  margin-bottom: 3px;
}

.c3 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  line-height: 1.53em;
  margin-bottom: 20px;
}

.c3 a {
  color: black;
}

.c4 {
  font-family: 'ITC Avant Garde Gothic W04','AvantGardeGothicITCW01D 731075',AvantGardeGothicITCW01Dm,Helvetica,sans-serif;
  -webkit-font-smoothing: antialiased;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-size: 11px;
  line-height: 1.65em;
  color: #e5e5e5;
}

@media (max-width:720px) {
  .c0 {
    margin: 0 auto;
  }
}

@media (max-width:900px) {
  .c1 {
    margin: auto;
  }
}

@media (max-width:720px) {
  .c1 {
    margin: auto;
  }
}

@media (max-width:600px) {
  .c1 {
    margin: auto;
  }
}

<div
  className="c0"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    style={
      Object {
        "fontSize": 0,
      }
    }
  />
  <div
    className="DisplayPanel__DisplayPanelContainer c1"
  >
    <div>
      <div
        className="c2"
      >
        Euismod Inceptos Quam
      </div>
      <div
        className="c3"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. <a href='http://artsy.net/articles'>Example Link</a>",
          }
        }
      />
      <div
        className="c4"
      >
        Sponsored by Artsy
      </div>
    </div>
  </div>
</div>
`;
